--- a/views/flights/index.ejs
+++ b/views/flights/index.ejs
@@ -5,9 +5,17 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel='stylesheet' href='/stylesheets/style.css' />
-  <title>Mongoose Flights</title>
+  <title>All Flights</title>
 </head>
 <body>
+    <nav>
+        <div>
+            <p>ALL FLIGHTS</p>
+        </div>
+        <div>
+            <p>ADD FLIGHT</p>
+        </div>
+    </nav>
   <h1>Your Flight List</h1>
   <table>
       <thead>
