--- a/views/flights/index.ejs
+++ b/views/flights/index.ejs
@@ -1,36 +1,23 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <link rel='stylesheet' href='/stylesheets/style.css' />
-  <title>All Flights</title>
-</head>
-<body>
-    <nav>
-        <div>
-            <p>ALL FLIGHTS</p>
-        </div>
-        <div>
-            <p>ADD FLIGHT</p>
-        </div>
-    </nav>
+<%- include('../partials/template') %>
   <h1>Your Flight List</h1>
   <table>
       <thead>
           <tr>
-              <th>Airline</th>
-              <th>Flight Number</th>
-              <th>Departs</th>
+              <th style = "color: white;" >Airline</th>
+              <th style = "color: white;" >Flight #</th>
+              <th style = "color: white;" >Departs</th>
           </tr>
       </thead>
-      <tbody>
+      <tbody style = "color: white;" >
           <% flights.forEach(function(f) { %>
               <tr>
                   <td><%= f.airline %></td>
                   <td><%= f.flightNo %></td>
-                  <td><%= f.departs %></td>
+                  <% if (f.departs < new Date()) { %>
+                  <td style = "color: red"> <%= f.departs %> </td>
+                  <% } else { %>
+                    <td> <%= f.departs %> </td>
+                    <% } %>
               </tr>
           <% }); %>
       </tbody>
