--- a/views/flights/new.ejs
+++ b/views/flights/new.ejs
@@ -1,14 +1,6 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel='stylesheet' href='/stylesheets/style.css' />
-    <title>New Flight</title>
-</head>
+<%- include('../partials/template') %>
 <body>
-    <h2>Enter a New Flight</h2>
+    <h1>Enter a New Flight</h1>
     <form action="/flights" method="POST">
         <label>Airline:
             <select name="airline">
@@ -17,11 +9,11 @@
                 <option value="Southwest">Southwest</option>
             </select>
         </label><br>
-        <label>Flight Number:
+        <label>Flight No:
           <input type="number" name="flightNo">
         </label><br>
         <label>Departs:
-            <input type="datetime-local" name="departs">
+            <input class=localTime type="datetime-local" name="departs">
         </label><br>
         <input type="submit" value="Add Flight">
     </form>   
