--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -6,12 +6,19 @@ body {
   font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
   align-content: center;
   color: white;
+  /* font: 16px; */
 }
 
-a #allFlights {
-  color: white;
+h1 {
+    color: white;
 }
 
-div {
-  position: absolute;
+a #flightsAll {
+  color: rgb(80, 79, 79);
+  font-family: Arial, Helvetica, sans-serif;
+}
+
+a #btnAddFlight {
+  border: 3px;
+  padding: 10px;
 }
