--- a/views/partials/style.css
+++ b/views/partials/style.css
@@ -13,7 +13,12 @@ body {
       color: white;
   }
 
-a #allFlights {
-    color: white;
+a #flightsAll {
+    color: rgb(80, 79, 79);
     font-family: Arial, Helvetica, sans-serif;
+  }
+
+  a #btnAddFlight {
+    border: 3px;
+    padding: 10px;
   }
