--- a/views/partials/template.ejs
+++ b/views/partials/template.ejs
@@ -4,19 +4,20 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="style.css"/>
+    <link rel="stylesheet" href="../..//public/stylesheets/style.css"/>
     <title>Flights</title>
 </head>
-<body style="background: url(https://i.imgur.com/Mjea6WX.jpg)">
+<body style="background: url(https://i.imgur.com/1NpKglI.jpg)"> 
+    <!-- https://i.imgur.com/Mjea6WX.jpg -->
     <nav>
         <div>
-            <a style = "color: white;" id = allFlights href="/">HOME</a>
+            <a style = "color: rgb(80, 79, 79);" id = flightsHome href="/">HOME</a>
         </div>
         <div>
-            <a style = "color: white;" id = addFlight href="/flights/new/">ADD FLIGHT</a>
+            <a style = "color: rgb(80, 79, 79);" id = flightsAdd href="/flights/new/">ADD FLIGHT</a>
         </div>
         <div>
-            <a style = "color: white;" id = allFlights href="/flights">YOUR FLIGHTS LIST</a>
+            <a style = "color: rgb(80, 79, 79);" id = flightsAll href="/flights">YOUR FLIGHTS LIST</a>
         </div>
     </nav>
 </body>
