--- a/views/flights/index.ejs
+++ b/views/flights/index.ejs
@@ -5,7 +5,8 @@
           <tr>
               <th style = "color: rgb(80, 79, 79);" >Airline</th>
               <th style = "color: rgb(80, 79, 79);" >Flight #</th>
-              <th style = "color: rgb(80, 79, 79);" >Departs</th>
+              <th style = "color: #504f4f;" >Departs</th>
+              <th style = "color: rgb(80, 79, 79);" >Details</th>
           </tr>
       </thead>
       <tbody id = "tblBodyFlights">
@@ -18,6 +19,9 @@
                   <% } else { %>
                     <td> <%= f.departs %> </td>
                     <% } %>
+                    <td><% f.showDetails %>
+                        <a href="flights/show/<%= f._id %>"> Show </a> 
+                    </td>
               </tr>
           <% }); %>
       </tbody>
