--- a/views/flights/index.ejs
+++ b/views/flights/index.ejs
@@ -1,29 +1,31 @@
 <%- include('../partials/template') %>
-  <h1>Your Flight List</h1>
-  <table id = "tableFlight">
-      <thead>
-          <tr>
-              <th style = "color: rgb(80, 79, 79);" >Airline</th>
-              <th style = "color: rgb(80, 79, 79);" >Flight #</th>
-              <th style = "color: #504f4f;" >Departs</th>
-              <th style = "color: rgb(80, 79, 79);" >Details</th>
-          </tr>
-      </thead>
-      <tbody id = "tblBodyFlights">
-          <% flights.forEach(function(f) { %>
-              <tr>
-                  <td><%= f.airline %></td>
-                  <td><%= f.flightNo %></td>
-                  <% if (f.departs < new Date()) { %>
-                  <td style = "color: rgb(143, 2, 2)"> <%= f.departs %> </td>
-                  <% } else { %>
+    <h1>Your Flight List</h1>
+    <table id = "tableFlight">
+        <thead>
+            <tr>
+                <th style = "color: rgb(80, 79, 79);" >Airport</th>
+                <th style = "color: rgb(80, 79, 79);" >Airline</th>
+                <th style = "color: rgb(80, 79, 79);" >Flight #</th>
+                <th style = "color: #504f4f;" >Departs</th>
+                <th style = "color: rgb(80, 79, 79);" >Details</th>
+            </tr>
+        </thead>
+        <tbody id = "tblBodyFlights">
+            <% flights.forEach(function(f) { %>
+                <tr>
+                    <td><%= f.airport %></td>
+                    <td><%= f.airline %></td>
+                    <td><%= f.flightNo %></td>
+                        <% if (f.departs < new Date()) { %>
+                    <td style = "color: rgb(143, 2, 2)"> <%= f.departs %> </td>
+                        <% } else { %>
                     <td> <%= f.departs %> </td>
-                    <% } %>
-                    <td><% f.showDetails %>
-                        <a href="flights/show/<%= f._id %>"> Show </a> 
+                        <% } %>
+                    <td>
+                        <a href="/flights/<%= f._id %>"> View </a> 
                     </td>
-              </tr>
-          <% }); %>
-      </tbody>
-  </table>
-  <%- include('../partials/footer') %>
+                </tr>
+            <% }); %>
+        </tbody>
+    </table>
+<%- include('../partials/footer') %>
