--- a/views/flights/show.ejs
+++ b/views/flights/show.ejs
@@ -1,23 +1,62 @@
 <%- include('../partials/template') %>
-  <h1>Your Selected Flight Details</h1>
-  <table id = "tableFlight">
-      <thead>
-          <tr>
-              <th style = "color: rgb(80, 79, 79);" >Airline</th>
-              <th style = "color: rgb(80, 79, 79);" >Flight #</th>
-              <th style = "color: rgb(80, 79, 79);" >Departs</th>
-          </tr>
-      </thead>
-      <tbody id = "tblBodyFlights">
-              <tr>
-                  <td><%= flight.airline %></td>
-                  <td><%= flight.flightNo %></td>
-                  <% if (flight.departs < new Date()) { %>
-                  <td style = "color: rgb(143, 2, 2)"> <%= flight.departs %> </td>
-                  <% } else { %>
-                    <td> <%= flight.departs %> </td>
-                    <% } %>
-              </tr>
-      </tbody>
-  </table>
-  <%- include('../partials/footer') %>
+    <h1>Your Selected Flight Details</h1>
+    <table id = "tableFlight">
+        <thead>
+            <tr>
+                <th style = "color: rgb(80, 79, 79);" >Airport</th>
+                <th style = "color: rgb(80, 79, 79);" >Airline</th>
+                <th style = "color: rgb(80, 79, 79);" >Flight #</th>
+                <th style = "color: rgb(80, 79, 79);" >Departs</th>
+            </tr>
+        </thead>
+        <tbody id = "tblBodyFlights">
+            <tr>
+                <td> <%= flight.airport %> </td>
+                <td> <%= flight.airline %> </td>
+                <td> <%= flight.flightNo %> </td>
+                <% if (flight.departs < new Date()) { %>
+            <td style = "color: rgb(143, 2, 2)"> <%= flight.departs %> </td>
+                <% } else { %>
+            <td> <%= flight.departs %> </td>
+                <% } %>
+            </tr>
+        </tbody>
+    </table>
+    <table id = "tableDestination">
+            <thead>
+                <tr>
+                    <th style = "color: rgb(80, 79, 79);" >Destination Airport</th>
+                    <th style = "color: rgb(80, 79, 79);" >Arrival Time</th>
+                </tr>
+            </thead>
+            <tbody id = "tblBodyFlights">
+                <% flight.destination.forEach(function(f) { %>
+                    <tr>
+                        <td> <%= f.airport %> </td>
+                        <td> <%= f.arrival %> </td>
+                    </tr>
+                <% }); %>
+            </tbody>
+        </table>
+    <h1>Add Destination</h1>
+    <form id = "destinations" action="/flights/<%= flight._id %>/destinations" method="POST">
+        <label>Destination Airport:</label>
+        <br>
+            <div>
+                <select name = "airport">
+                    <option value = "AUS">AUS</option>
+                    <option value = "DAL">DAL</option>
+                    <option value = "LAX">LAX</option>
+                    <option value = "SEA">SEA</option>
+                </select>
+            </div>
+        <label>Arrival Time:</label>
+        <br>
+            <div>
+                <input class = "timeDestination" type = "datetime-local" name = "arrival">
+            </div>
+        <div>
+            <input id = "btnFlightAdd" type = "submit" value = "Add Destination">
+        </div>
+    </form> 
+<%- include('../partials/footer') %>
