--- a/views/flights/show.ejs
+++ b/views/flights/show.ejs
@@ -1,32 +1,32 @@
 <%- include('../partials/template') %>
-    <h1>Your Selected Flight Details</h1>
-    <table id = "tableFlight">
-        <thead>
-            <tr>
-                <th style = "color: rgb(80, 79, 79);" >Airport</th>
-                <th style = "color: rgb(80, 79, 79);" >Airline</th>
-                <th style = "color: rgb(80, 79, 79);" >Flight #</th>
-                <th style = "color: rgb(80, 79, 79);" >Departs</th>
-            </tr>
-        </thead>
-        <tbody id = "tblBodyFlights">
-            <tr>
-                <td> <%= flight.airport %> </td>
-                <td> <%= flight.airline %> </td>
-                <td> <%= flight.flightNo %> </td>
-                <% if (flight.departs < new Date()) { %>
-            <td style = "color: rgb(143, 2, 2)"> <%= flight.departs %> </td>
-                <% } else { %>
-            <td> <%= flight.departs %> </td>
-                <% } %>
-            </tr>
-        </tbody>
-    </table>
-    <table id = "tableDestination">
+    <h1>Your Selected Departure Flight Details</h1>
+        <table id = "tableSelecFlight">
             <thead>
                 <tr>
-                    <th style = "color: rgb(80, 79, 79);" >Destination Airport</th>
-                    <th style = "color: rgb(80, 79, 79);" >Arrival Time</th>
+                    <th style = "color: rgb(80, 79, 79);" >Airport</th>
+                    <th style = "color: rgb(80, 79, 79);" >Airline</th>
+                    <th style = "color: rgb(80, 79, 79);" >Flight #</th>
+                    <th style = "color: rgb(80, 79, 79);" >Departs</th>
+                </tr>
+            </thead>
+            <tbody id = "tblBodyFlights">
+                <tr>
+                    <td><%= flight.airport %> </td>
+                    <td><%= flight.airline %> </td>
+                    <td><%= flight.flightNo %> </td>
+                        <% if (flight.departs < new Date()) { %>
+                    <td style = "color: rgb(143, 2, 2)"> <%= flight.departs %> </td>
+                        <% } else { %>
+                    <td><%= flight.departs %> </td>
+                        <% } %>
+                </tr>
+            </tbody>
+        </table>
+        <table id = "tableDestination">
+            <thead>
+                <tr>
+                    <th style = "color: rgb(80, 79, 79);" >Destination Airport:</th>
+                    <th style = "color: rgb(80, 79, 79);" >Arrival Time:</th>
                 </tr>
             </thead>
             <tbody id = "tblBodyFlights">
@@ -38,10 +38,11 @@
                 <% }); %>
             </tbody>
         </table>
-    <h1>Add Destination</h1>
-    <form id = "destinations" action="/flights/<%= flight._id %>/destinations" method="POST">
-        <label>Destination Airport:</label>
+    <div>
         <br>
+        <h1>Add Destination</h1>
+        <form id = "destinations" action="/flights/<%= flight._id %>/destinations" method="POST">
+        <label>Destination Airport:</label>
             <div>
                 <select name = "airport">
                     <option value = "AUS">AUS</option>
@@ -51,12 +52,55 @@
                 </select>
             </div>
         <label>Arrival Time:</label>
-        <br>
             <div>
                 <input class = "timeDestination" type = "datetime-local" name = "arrival">
             </div>
-        <div>
-            <input id = "btnFlightAdd" type = "submit" value = "Add Destination">
-        </div>
-    </form> 
+            <div>
+                <input id = "btnFlightAdd" type = "submit" value = "Add Destination">
+            </div>
+        </form> 
+        <br>
+    </div>
+    <div>
+    <h1>Your Selected Ticket Details</h1>
+    </div>
+    <br>
+    <% if (tickets.length) { %>
+        <table id = "tableTickets">
+            <thead>
+                <tr>
+                    <th style = "color: rgb(80, 79, 79);" >Seat:</th>
+                    <th style = "color: rgb(80, 79, 79);" >Price:</th>
+                </tr>
+            </thead>
+            <tbody id = "tblBodyTickets">
+                <% tickets.forEach(function(t) { %>
+                    <tr>
+                        <td> <%= t.seat %> </td>
+                        <td> <%= t.price %> </td>
+                    </tr>
+                <% }); %>
+            </tbody>
+        </table>
+    </div>
+    <h1>Add Ticket</h1>
+    <br>
+        <form id = "tickets" action="/tickets/<%= flight._id %>/tickets" method="POST">
+        <br>
+            <label>Seat:</label>
+            <br>
+                <div>
+                    <input id = "ticketSeat" type = "text" name = "arrival">
+                </div>
+            <label>Price:</label>
+            <br>
+                <div>
+                    <input class = "ticketPrice" type = "text" name = "arrival">
+                </div>
+                <div>
+                    <input id = "btnFlightAdd" type = "submit" value = "Add Ticket">
+                </div>
+                 <br>
+</form> 
+</div>
 <%- include('../partials/footer') %>
